# bbox-visualizer2

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
bbox_visualizer2/: __init__.py  bbox_visualizer2.py
demos/: multiple_objects.py  multiple_objects2.py  single_object.py
docs/: index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/bbox_visualizer2/: __init__.py  bbox_visualizer2.py
tutorials/: index.html
