[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbox-visualizer2"
version = "0.0.2"
authors = [
  { name="Fansure Grin", email="pwz113436@gmail.com" },
]
description = "A bounding box visualizer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fansuregrin/bbox-visualizer2"
"Bug Tracker" = "https://github.com/fansuregrin/bbox-visualizer2/issues"